--- a/guilhermejp/package.json
+++ b/guilhermejp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
@@ -24,6 +25,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^6.2.1"
   }
 }
